--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -8,7 +8,14 @@ html(lang="en")
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body 
         header 
-            h1 ZoOo0oM
+            h1 CYJ's TEST SERVER
         main 
             h2 SYSTEM_OPERATRING
+            form#id
+                input(type="text", placeholder="UserID", requried)
+                button Save
+            ul
+            form#message
+                input(type="text", placeholder="write a massege", requried)
+                button Send
         script(src="/public/js/app.js")
