--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -9,13 +9,10 @@ html(lang="en")
     body 
         header 
             h1 CYJ's TEST SERVER
-        main 
-            h2 SYSTEM_OPERATRING
-            form#id
-                input(type="text", placeholder="UserID", requried)
-                button Save
-            ul
-            form#message
-                input(type="text", placeholder="write a massege", requried)
-                button Send
+        main
+            div#welcome
+                form
+                    input(placeholder="room name", required, type="text")
+                    button Enter Room
+        script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
