--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -14,5 +14,14 @@ html(lang="en")
                 form
                     input(placeholder="room name", required, type="text")
                     button Enter Room
+            div#room
+                h3 
+                ul
+                form#UserID
+                    input(placeholder="User ID", required, type="text")
+                    button Save
+                form#msg
+                    input(placeholder="message", required, type="text")
+                    button Send
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
