--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -12,14 +12,12 @@ html(lang="en")
         main
             div#welcome
                 form
-                    input(placeholder="room name", required, type="text")
+                    input#UserID(placeholder="User ID", required, type="text")
+                    input#roomName(placeholder="room name", required, type="text")
                     button Enter Room
             div#room
                 h3 
                 ul
-                form#UserID
-                    input(placeholder="User ID", required, type="text")
-                    button Save
                 form#msg
                     input(placeholder="message", required, type="text")
                     button Send
