--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -8,7 +8,7 @@ html(lang="en")
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body 
         header 
-            h1 CYJ's TEST SERVER
+            h1 JUST CHAT SERVER
         main
             div#welcome
                 form
