--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -8,20 +8,8 @@ html(lang="en")
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body 
         header 
-            h1 JUST CHAT SERVER
+            h1 Video Test Server
         main
-            div#welcome
-                form
-                    input#UserID(placeholder="User ID", required, type="text")
-                    input#roomName(placeholder="room name", required, type="text")
-                    button Enter Room
-                h4 Open Rooms:
-                ul
-            div#room
-                h3 
-                ul
-                form#msg
-                    input(placeholder="message", required, type="text")
-                    button Send
+            
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
